bit:drawer - fixing scroll when drawer is visible

--- a/meteor-app/client/components/maps/styles.scss
+++ b/meteor-app/client/components/maps/styles.scss
@@ -2,8 +2,8 @@ $map-height: 5000px;
 $map-width: 5000px;
 
 .scroll--vertical-only {
-  overflow-y: "scroll";
-  overflow-x: 'hidden';
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
 }
 
 .map {	  
